# Socket

./: .gitignore  CMakeLists.txt  README.md  gen_errno.py
cmake/: add-antlr4-parser.cmake  add-antlr4.cmake
src/: CMakeLists.txt  Calculator.g4  benchmark.cpp  tcp_forward.cpp  test_OOB.cpp  test_linger.cpp  test_sticky_packet.cpp  util.cpp  util.hpp
src/server_type/: CMakeLists.txt  st_select_server.cpp  st_sync_server.cpp
src/servers/: st_select_server.cpp  st_sync_server.cpp
src/sync_calculator/: requester.cpp  requester.hpp  responser.cpp  responser.hpp
src/utils/: client.cpp  client.hpp  common.cpp  common.hpp  exceptions.hpp  server.cpp  server.hpp
test/: CMakeLists.txt  test_linger.cpp  test_non_blocking.cpp  test_sticky_packet.cpp  test_util.cpp
